<resources>
    <string name="app_name">Tbug</string>
    <string name="sessionactivity1">SessionActivity1</string>
    <string name="intent_2_sessionactivity2">Intent 2 SessionActivity2</string>
    <string name="title_activity_tween">TweenActivity</string>
    <string name="title_activity_frame">FrameActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paramsSetting">参数设置</string>
    <string name="reTest">重新测速</string>
    <string name="test">测速</string>

    <!--大速率测速-->
    <string name="key_double_click_exit_test">双击返回退出测试</string>
    <string name="key_testData">测试数据</string>
    <string name="key_avg_speed">平均速率: </string>
    <string name="key_max_speed">峰值速率: </string>
    <string name="key_current_speet">当前速率</string>
    <string name="key_param_set">参数设置</string>
    <string name="key_retest">重新测试</string>
    <string name="key_stoptest">停止测试</string>

    <string name="action_about">关于</string>
    <string name="key_testover">测速结束</string>
    <string name="key_testfalse">测速失败</string>
    <string name="key_min_speed">最小速率</string>
    <string name="key_band">用户带宽</string>
    <string name="key_assess_speed">评估速率</string>
    <string name="key_assess_quality">评估质量</string>
    <string name="key_downloadnow">正在下载</string>
    <string name="key_downloadpersent">已下载</string>
    <string name="key_pleasewaiting">请稍候...</string>


    <string name="key_channel_break_cannt_communication">通道断开无法通讯</string>
    <string name="key_speet_initialize">正在检测网络状态...</string>
    <string name="key_param_err_order_send_false">参数异常，命令发送失败</string>
    <string name="key_one_click_speettest">一键测速</string>
    <string name="key_canncel_exit">取消退出</string>
    <string name="key_pppoe_accounts">PPPoE帐号：</string>
    <string name="key_pppoe_password">PPPoE密码：</string>
    <string name="key_subMask">子网掩码：</string>
    <string name="key_close_route_false_please_shutoff_route_by_manual">通讯失败，如已完成测试，请关闭113防止耗电</string>
    <string name="key_state_indicate">状态指示：</string>


    <string name="key_timeout">通讯超时</string>
    <string name="key_Initializing">正在初始化，请稍候...</string>
    <string name="key_Ini_success_will_net_set">初始化成功，准备进行网络配置...</string>
    <string name="key_communication_abnormal">通讯异常</string>
    <string name="key_net_channel_not_create">网络不通</string>
    <string name="key_speedtest_finished">测速结束</string>
    <string name="key_speedtest_over_err_unknown">未知异常原因，测速停止</string>
    <string name="key_speedtest_testing">测速中...</string>
    <string name="key_speedtest_url_err">URL错误</string>
    <string name="key_speedtest_initiative_stop">主动停止成功</string>
    <string name="key_speedtest_poweroff_success">测速模块断电成功</string>
    <string name="key_speedtest_poweroff_false">测速模块断电失败</string>
    <string name="key_speedtest_net_set_false">网络配置失败</string>
    <string name="key_speedtest_net_setting">正在配置网络，请稍候...</string>

    <string name="settings">设置</string>
    <string name="idPrompt">提示</string>
    <string name="idCancel">取消</string>
    <string name="idOk">确定</string>
    <string name="key_areyousure_exit">确认退出吗?</string>
    <string name="key_downloaderr">下载异常</string>
    <string name="key_checkupdata">检查更新</string>
    <string name="key_init">测速模块初始化中</string>

    <string name="exclusion_please_close_ONU">功能为开启状态，请将其关闭，再进行大速率测速</string>
    <string name="key_checkunusual_cutdown_restart">检测到异常断电，请退出测速模块重新初始化</string>
    <string name="key_modeerr_restart">测速模块异常，\r\n请退出应用重新初始化</string>
    <string name="key_upload_fail_reupload">上传失败，请重新上传</string>
    <string name="key_upload_success">上传成功</string>
    <string name="key_must_upgrade">检测到软件必须进行升级，请打开3G/4G或wifi,重启程序进行下载升级</string>
    <string name="key_shutdowning">正在断电...</string>
    <string name="key_not_get_valid_value">未获取有效参数</string>
    <string name="key_thread_number_more_than_1">开启线程数须大于1</string>
    <string name="key_thread_number_less_than_30">开启线程数须小于30</string>
    <string name="key_test_time_more_than_1">测试时长须大于1s</string>
    <string name="key_test_time_less_than_30">测试时长须小于30s</string>
    <string name="key_net_break">网络断开</string>

    <string name="key_willdownload">准备下载...</string>
    <string name="key_zoneNo">区域号：</string>
    <string name="key_testSoftVer">测速软件版本：</string>
    <string name="key_appVer">APP版本：</string>

    <string name="key_testURL">测速URL:</string>
    <string name="key_selectNetType">网络连接方式：</string>
    <string name="key_staticIP">静态IP</string>

    <string name="key_UnitSet">单位设置：</string>
    <string name="key_GateWay">网关:</string>
    <string name="key_openThreadNumber">开启线程数:</string>
    <string name="key_testTime">测试时长(s):</string>

    <string name="key_match_deviec">配对设备：</string>
    <string name="key_scanning">正在扫描...</string>
    <string name="key_scandevice">扫描设备</string>
    <string name="key_canuse_blue_devcie">可用设备</string>

    <!-- DevicescanActivity -->
    <string name="key_unknowName">未知名称</string>
    <string name="key_getbluetoothMacErr">获取蓝牙地址失败</string>

    <!-- FunctionSelectActivity -->
    <string name="key_blue_conn">蓝牙连接</string>
    <string name="key_blue_conn_error_msg">蓝牙连接已经断开，请先确认蓝牙链接情况。</string>
    <string name="key_blue_conncting">蓝牙连接中...</string>
    <string name="key_blue_lost_connect">失去连接</string>
    <string name="key_blue_connect_false">连接失败</string>
    <string name="key_blue_reConnect">确保远端蓝牙开启，点此重连</string>
    <string name="key_blue_discovery_channel">蓝牙通道建立</string>
    <string name="key_speet_moduel_restore">测速模块重置</string>
    <string name="key_speet_moduel_restore_success">测速模块重置成功</string>
    <string name="key_speet_moduel_restore_false">测速模块重置失败</string>
    <string name="key_blue_cannot_use">本机蓝牙不可用</string>
    <string name="key_speet_moduel_restoring_message">正在恢复出厂设置，稍等片刻，请不要中断...</string>
    <string name="key_blue_channel_not_create_functCanntUse">蓝牙通道未建立，功能不可用</string>

    <string name="key_blue_channle_not_create">蓝牙通道未建立</string>
    <string name="key_speedbox_title">测速盒子</string>

    <string name="key_test_id">测试ID:</string>
    <string name="key_uppeak_speed">上行峰值：</string>
    <string name="key_upavg_speed">上行均值</string>
    <string name="click">点击下载图片</string>
    <string name="show_flux">显示流量</string>
    <string name="title_activity_process">ProcessActivity</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>


    <string name="error_code_detail">61 ： GPS定位结果\n62 ： 扫描整合定位依据失败。此时定位结果无效。\n63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n65 ： 定位缓存的结果。\n66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n161： 表示网络定位结果\n162~167： 服务端定位失败\n502：key参数错误\n505：key不存在或者非法\n601：key服务被开发者自己禁用\n602：key mcode不匹配\n501～700：key验证失败\n</string>
    <string name="qa_callback">\n问题反馈:\n
        邮件格式格式：\n
		1) 手机标识（移动联通IMEI，电信MEID）\n
		2) 问题发生时间；\n
		3）定位类型：失败（给出返回码），或者不准（给出真实位置）等；\n
		4）具体描述：细节描述，可以给出问题发生的频率或者APP名称，sdk版本等，也可以加上附件如日志，贴图等\n
        </string>
    <string name="qa_callback_mail">\n反馈邮箱:loc-bugs@baidu.com</string>
    <string name="toast_normal">一般性Toast显示+StringID</string>
    <string name="title_activity_edit_text">EditTextActivity</string>


    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    <string name="save">保存</string>
    <string name="clip">裁剪</string>
    <string name="cancle">取消</string>
    <string name="write_comment">写评论</string>
    <string name="send">发送</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新数据中…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="qjj">雨巷 戴望舒 雨巷 雨巷 撑着油纸伞，独自 彷徨在悠长，悠长 又寂寥的雨巷， 我希望逢着 一个丁香一样的 结着愁怨的姑娘。 她是有 丁香一样的颜色， 丁香一样的芬芳， 丁香一样的忧愁， 在雨中哀怨， 哀怨又彷徨； 她彷徨在这寂寥的雨巷， 撑着油纸伞 像我一样， 像我一样地 默默彳亍①着， 冷漠，凄清，又惆怅②。 她静默地走近 走近，又投出 太息③一般的眼光， 她飘过 像梦一般的， 像梦一般的凄婉迷茫。 像梦中飘过 一枝丁香的， 我身旁飘过这女郎； 她静默地远了，远了， 到了颓圮④的篱墙， 走尽这雨巷。 在雨的哀曲里， 消了她的颜色， 散了她的芬芳 消散了，甚至她的 太息般的眼光， 丁香般的惆怅④。 撑着油纸伞，独自 彷徨在悠长，悠长 又寂寥的雨巷， 我希望飘过 一个丁香一样的 结着愁怨的姑娘。[1]</string>
    <string name="poetrm"> 赵客缦胡缨，吴钩霜雪明。\n 银鞍照白马，飒沓如流星。\n 十步杀一人，千里不留行。\n 事了拂衣去，深藏身与名。\n 闲过信陵饮，脱剑膝前横。\n 将炙啖朱亥，持觞劝侯嬴。\n 三杯吐然诺，五岳倒为轻。\n 眼花耳热后，意气素霓生。\n 救赵挥金槌，邯郸先震惊。\n 千秋二壮士，烜赫大梁城。\n 纵死侠骨香，不惭世上英。\n 谁能书阁下，白首太玄经。</string>
<<<<<<< HEAD:LukeAndroidDemo/app/src/main/res/values/strings.xml
<<<<<<< Updated upstream
<string name="del_history">删除历史记录</string>
=======

>>>>>>> Stashed changes
=======
    <string name="del_history">删除历史记录</string>
    <string name="confirm">确定</string>
>>>>>>> 318dbb5a61c29e663997563f16ba28f9530822fa:03Code/L_Android/app/src/main/res/values/strings.xml
    <string-array name="categoryList1">
        <item>__all__</item>
        <item>news_hot</item>
        <item>news_society</item>


    </string-array>
    <string-array name="categoryList2">
        <item>news_entertainment</item>
        <item>news_tech</item>
        <item>news_military</item>
        <item>news_sports</item>
        <item>news_car</item>
        <item>news_finance</item>
        <item>news_world</item>
        <item>news_fashion</item>
        <item>news_travel</item>
        <item>news_discovery</item>
        <item>news_baby</item>
        <item>news_regimen</item>
        <item>news_story</item>
        <item>essay_joke</item>
        <item>news_game</item>
        <item>news_history</item>
        <item>news_food</item>
    </string-array>

    <string-array name="lifecycleTabs">
        <item>Atab</item>
        <item>Btab</item>
        <item>Ctab</item>
        <item>Dtab</item>
        <item>Etab</item>
        <item>Ftab</item>
    </string-array>
</resources>
