<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_commentview"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cancle"
                android:textColor="@color/black"
                android:textSize="@dimen/sp13"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/write_comment"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"/>

            <TextView
                android:id="@+id/text_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/send"
                android:textColor="@color/gray_text_status"
                android:textSize="@dimen/sp13"/>
        </RelativeLayout>

        <com.lukemi.android.view.MyEditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_80"
            android:layout_marginTop="@dimen/view_10"
            android:background="@drawable/shape_edit_comment"
            android:focusable="true"
            android:gravity="start"
            android:padding="@dimen/view_5"
            android:textColor="@color/black_text_doc"
            android:textColorHint="@color/gray_text_hint"
            android:textSize="@dimen/text_size_13"/>
    </LinearLayout>
</RelativeLayout>
